[tool.poetry]
name = "iban-checker-api"
version = "0.1.0"
description = ""
authors = ["Eduard Predescu <eduard.florin.predescu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
loguru = "^0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
